# primihub

./: .bazelrc  .coverage  .gitignore  .gitmodules  AGENTS.md  BUILD.bazel  BUILD_GUIDE.md  BUILD_SCRIPTS.md  BUILD_TROUBLESHOOTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.build  Dockerfile.ci  Dockerfile.gmp-patched  Dockerfile.local-build  Dockerfile.localbuild  Dockerfile.mini  Dockerfile.node-simple  Dockerfile.node-ubuntu24  Dockerfile.ph-build-focal  Dockerfile.release  LOG_MANAGEMENT.md  Makefile  PROJECT_ANALYSIS.md  README.md  RUNNING_STATUS.md  TASK_EXECUTION_TROUBLESHOOTING.md  WORKSPACE  WORKSPACE_CN  WORKSPACE_GITHUB  auto_build_primihub.sh  basic_tests.py  build_docker.sh  build_local.sh  client_run.sh  commit.txt  deploy_fl_bridge.sh  docker-compose.yml  fix_absl.patch  fix_cryptotools.patch  (+29 more)
.github/workflows/: build-amd64.yml  build-arm64.yml  main.yml  release.yaml
bazel/: repository_deps.bzl  repository_deps.bzl.backup
bench/: .gitignore  cuda_vs_avx2.sh  cuda_vs_avx2_bench.cu  double_pir_latency_bench.sh  double_pir_persistence_bench.sh  frodo_pir_latency_bench.sh  pir_billion_scale_bench.sh  pir_correctness_smoke.sh  pir_runtime_activations.sh  pir_selector_sweep.sh  simple_pir_persistence_bench.sh  spiral_smoke_bench.sh
bench/results/: pir_correctness_smoke_20260612.json  pir_cuda_vs_avx2_20260627.json  pir_frodo_latency_20260612.json  pir_frodo_latency_20260612_bulk.json  pir_frodo_latency_chunkg5b_v2_20260618T090355Z.json
ci/cn-build/: WORKSPACE.cn  WORKSPACE_GITHUB.cn  build-node.sh  repository_deps.cn.bzl  setup.sh
config/: node0.yaml  node1.yaml  node2.yaml  pir_server_config.json  primihub_node0.yaml  primihub_node0_local.yaml  primihub_node1.yaml  primihub_node1_local.yaml  primihub_node2.yaml  primihub_node2_local.yaml  sql_security_config.yaml
data/: train_party_0.csv
data/cert/: ca.crt  ca.key  test.crt  test.key
doc/: build.md  error.md  install.md  quick_fix_guide.md  task_main_compilation_issues.md
docker-all-in-one/: .env  .env_bak  README.md  deploy.sh  docker-compose.yaml
docker-all-in-one/config/: default0.conf  default1.conf  default2.conf  primihub_node2.yaml
docker-all-in-one/data/initsql/: nacos_config.sql  privacy1.sql  privacy2.sql  privacy3.sql
docker-one-in-one/: .env  README.md  deploy.sh  docker-compose.yaml  export_images.sh
docker-one-in-one/config/: default.conf  node0.yaml  node1.yaml  node2.yaml
docker-one-in-one/data/initsql/: nacos_config.sql  privacy.sql
docs/: architecture.md  benchmark-plan.md  deployment.md  detailed-design.md  fl-architecture.md  fl-detailed-design.md  requirements.md  statistical_tests.md
docs/images/: primihub_architecture.drawio  primihub_task_flow.drawio  primihub_topology.drawio
docs/pir/: activation-pattern.md  benchmark.md  billion-rollout-checklist.md  frodo-port-plan.md  gpu-cpu-optimization-2026-07.md  hint-lifecycle.md  multi-algo-guide.md  params-port-plan.md  regression-2026-06-27-local-full.md  rotate-github-pat.sh  server-port-plan.md  spiral-calibration-notes.md  spiral-client-port-plan.md  threat-model.md  tiptoe-port-plan.md  verify-github-pat.sh  ypir-port-plan.md
e2etest/local/: test_psi.py
example/: double_pir_README.md  double_pir_primary.json  double_pir_secondary.json  double_pir_task_conf.json  keyword_pir_task_conf.json  mpc_add_task_conf.json  mpc_cmp_task_conf.json  mpc_div_task_conf.json  mpc_lr_task_conf.json  mpc_missing_value_task_conf.json  mpc_mul_task_conf.json  mpc_statistics_avg_task_conf.json  mpc_statistics_max_task_conf.json  mpc_statistics_min_task_conf.json  mpc_statistics_sum_task_conf.json  mpc_sub_task_conf.json  simple_pir_task_conf.json
example/code/: correlation_test.py  statistical_tests_example.py
meta_service/meta_service/: kill.sh  meta_log0  meta_log1  meta_log2  run.sh
python/: SETUP.md  ph_secure_lib.py  pytest.ini  requirements.txt  setup.py
python/primihub/: __init__.py  context.py  executor.py  linkcontext.py  ph_secure_lib.py
python/tests/: conftest.py  test_fl_feature_engineering.py  test_fl_logistic_regression.py  test_local_data_statistics.py
scripts/: check_task_health.sh  cleanup_logs.sh  coverage_all.sh  coverage_python.sh  fix_task_execution.sh  run_all_tests.sh  truncate_logs.py
src/primihub/kernel/pir-acc/: CMakeLists.txt  README.md  calculate.cu  decrypt.cpp  encrypt.cu  keygen.cpp  main.cpp  pir.cu  pir.hpp  pir_client.cpp  pir_client.hpp  pir_server.cu  pir_server.cuh
src/primihub/kernel/pir-acc/SIGMA/: CMakeLists.txt
src/primihub/kernel/pir-acc/SIGMA/cmake/: SIGMAConfig.cmake.in
src/primihub/kernel/pir-acc/SIGMA/pkgconfig/: sigma.pc.in  sigma_msgsl.pc.in  sigma_shared.pc.in
src/primihub/kernel/pir-acc/SIGMA/src/: CMakeLists.txt  batchencoder.cu  batchencoder.h  ciphertext.cpp  ciphertext.h  ckks.cu  ckks.cuh  context.cpp  context.h  decryptor.cpp  decryptor.h  dynarray.h  encryptionparams.cpp  encryptionparams.h  encryptor.cu  encryptor.h  evaluator.cu  evaluator.cuh  galoiskeys.h  kernelprovider.cu  kernelprovider.cuh  kernelutils.cu  kernelutils.cuh  keygenerator.cpp  keygenerator.h  kswitchkeys.cpp  kswitchkeys.h  memorymanager.cpp  memorymanager.h  modulus.cpp  modulus.h  plaintext.cpp  plaintext.cuh  publickey.h  randomgen.cpp  randomgen.h  randomtostd.h  relinkeys.h  secretkey.h  serializable.h  (+6 more)
src/primihub/kernel/pir-acc/SIGMA/src/util/: CMakeLists.txt  HostList.cu  HostList.h  blake2.h  blake2xb.c  clang.h  clipnormal.cpp  clipnormal.h  common.cpp  common.h  config.h.in  croots.cpp  croots.h  defines.h  devicearray.cuh  dwthandler.h  fips202.c  galois.cu  galois.h  gcc.h  globals.cpp  globals.h  hash.cpp  hash.h  hestdparms.h  hostarray.h  iterator.cpp  iterator.h  locks.h  mempool.cpp  mempool.h  msvc.h  ntt.cpp  ntt.h  numth.cpp  numth.h  pointer.h  polyarithsmallmod.cpp  polyarithsmallmod.h  polycore.h  (+21 more)
src/primihub/kernel/pir-acc/data/: config.json
src/primihub/kernel/pir-acc/util/: CMakeLists.txt  configmanager.cpp  configmanager.h  keyutil.cpp  keyutil.h  safequeue.h  vectorutil.cu  vectorutil.h
test/primihub/: BUILD  test_util.h
(+631 files in other folders)
